# pei

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  Makefile.txt  README.md  package.json  pnpm-lock.yaml  ruff.toml  step1_migrate.ps1  turbo.json
.claude/: launch.json
.context/: PEI_antigravity_knowledge.md
apps/api/: extract_openapi.py  openapi.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: diagrams.py  generate.py  projects.py  repair.py
apps/api/app/domain/models/: diagram.py  enums.py  geometry.py
apps/api/app/domain/ports/: layout_port.py  validator_port.py
apps/api/app/domain/services/: repair_service.py  tag_service.py  template_service.py
apps/api/app/infrastructure/logging/: repair_logger.py
apps/api/app/layout/: layout_service.py  slot_layout.py
apps/api/app/schemas/: base.py  canonical.py  generator_models.py  project.py  rules.py
apps/api/app/services/: seed_loader.py  validator.py
apps/api/app/validation/: rule_engine.py  rule_models.py
apps/api/data/: pei.db  pei.db.bak
apps/api/pei_backend.egg-info/: PKG-INFO  SOURCES.txt
apps/web/: package-lock.json  (+2 more)
backend/: clean_db.py  diag.json  log.txt  offsets.txt  output.txt  seed_error.txt  seed_error_utf8.txt  test_results.txt  test_results2.txt  test_results3.txt  test_results4.txt  validation_results.txt
docs/: PEI_Antigravity_셋업가이드.md  PEI_규격DB_스키마_규칙100건.md  PEI_백엔드API_설계서.md  PEI_예시_PLA_PID_시나리오.md  PEI_프로젝트구조_v2.md  PEI_프론트엔드캔버스_설계서.md  PFD_PID_규정기준_총정리.xlsx  Plant_Engineering_IDE_프로젝트_정리서.docx
frontend/: package.json  run_test.ts
(+78 files in other folders)
