[project]
name = "pei-backend"
version = "0.1.0"
description = "Plant Engineering IDE Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.9",
    "aiosqlite>=0.19.0",
    "greenlet>=3.0.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.26.0",
    "ruff>=0.2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
